fix overflow bug

--- a/source/sass/_archive.scss
+++ b/source/sass/_archive.scss
@@ -1,5 +1,7 @@
 .content-archive {
+  overflow: hidden;
   margin: 40px auto;
+  width: 100%;
   .archive-header {
     margin-bottom: 30px;
     a.home-entry {
