--- a/source/sass/_base.scss
+++ b/source/sass/_base.scss
@@ -3,6 +3,7 @@ html, body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
   min-height: 100%;
+  overflow-x: hidden;
 }
 * {
   // box-sizing:border-box;
